--- a/config.yaml
+++ b/config.yaml
@@ -204,17 +204,8 @@ params:
           data-ad-slot="4450372783"
           data-ad-format="auto"
           data-full-width-responsive="true"></ins>
-      <script type="text/javascript">
-      document.addEventListener('DOMContentLoaded', () => {
-        setTimeout(function() {
-          try {
-            (adsbygoogle = window.adsbygoogle || []).push({});
-          } catch (e) {
-            console.log("Load adsbygoogle failed");
-            console.error(e);
-          }
-        }, 256);
-      });
+      <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
     article:
       # panel_header:
@@ -230,17 +221,8 @@ params:
             data-ad-slot="5599802929"
             data-ad-format="auto"
             data-full-width-responsive="true"></ins>
-        <script type="text/javascript">
-        document.addEventListener('DOMContentLoaded', () => {
-          setTimeout(function() {
-            try {
-              (adsbygoogle = window.adsbygoogle || []).push({});
-            } catch (e) {
-              console.log("Load adsbygoogle failed");
-              console.error(e);
-            }
-          }, 256);
-        });
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
       # before_comments:
       # after_comments:
@@ -252,17 +234,8 @@ params:
             data-ad-slot="1249494377"
             data-ad-format="auto"
             data-full-width-responsive="true"></ins>
-        <script type="text/javascript">
-        document.addEventListener('DOMContentLoaded', () => {
-          setTimeout(function() {
-            try {
-              (adsbygoogle = window.adsbygoogle || []).push({});
-            } catch (e) {
-              console.log("Load adsbygoogle failed");
-              console.error(e);
-            }
-          }, 256);
-        });
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
     page:
       after_body: |
@@ -273,17 +246,8 @@ params:
             data-ad-slot="5599802929"
             data-ad-format="auto"
             data-full-width-responsive="true"></ins>
-        <script type="text/javascript">
-        document.addEventListener('DOMContentLoaded', () => {
-          setTimeout(function() {
-            try {
-              (adsbygoogle = window.adsbygoogle || []).push({});
-            } catch (e) {
-              console.log("Load adsbygoogle failed");
-              console.error(e);
-            }
-          }, 256);
-        });
+        <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
     # archive:
     #   # panel_header:
