--- a/config.yaml
+++ b/config.yaml
@@ -202,7 +202,7 @@ params:
           style="display:block; width: 120px; height: 57px;"
           data-ad-client="ca-pub-8180054975285991"
           data-ad-slot="4450372783"
-          data-ad-format="auto"
+          data-ad-format="rectangle, horizontal"
           data-full-width-responsive="true"></ins>
       <script>
       (adsbygoogle = window.adsbygoogle || []).push({});
@@ -219,7 +219,7 @@ params:
             style="display:block"
             data-ad-client="ca-pub-8180054975285991"
             data-ad-slot="5599802929"
-            data-ad-format="auto"
+            data-ad-format="rectangle, horizontal"
             data-full-width-responsive="true"></ins>
         <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
@@ -232,7 +232,7 @@ params:
             style="display:block"
             data-ad-client="ca-pub-8180054975285991"
             data-ad-slot="1249494377"
-            data-ad-format="auto"
+            data-ad-format="rectangle, horizontal"
             data-full-width-responsive="true"></ins>
         <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
@@ -244,7 +244,7 @@ params:
             style="display:block"
             data-ad-client="ca-pub-8180054975285991"
             data-ad-slot="5599802929"
-            data-ad-format="auto"
+            data-ad-format="rectangle, horizontal"
             data-full-width-responsive="true"></ins>
         <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
