--- a/config.yaml
+++ b/config.yaml
@@ -232,7 +232,7 @@ params:
             style="display:block"
             data-ad-client="ca-pub-8180054975285991"
             data-ad-slot="1249494377"
-            data-ad-format="rectangle, horizontal"
+            data-ad-format="rectangle, vertical"
             data-full-width-responsive="true"></ins>
         <script>
         (adsbygoogle = window.adsbygoogle || []).push({});
