统一增加和梳理chartjs,mermaid,excalidraw,drawio的shortcodes、代码块引用、图片引用的插件

--- a/config.yaml
+++ b/config.yaml
@@ -201,6 +201,8 @@ params:
   excalidraw:
     js: "https://esm.sh/@excalidraw/excalidraw"
     css: "https://cdn.jsdelivr.net/npm/excalidraw/dist/excalidraw.min.css"
+  drawio:
+    js: "https://viewer.diagrams.net/js/viewer-static.min.js"
   utteranc:
     repo: "owent/blog-website"
     issue_term: "pathname"
